--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
-  build-and-deploy:
+  EdgeOne:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
